[package]
name = "mikrom-scheduler"
version = "0.3.1"
edition = "2024"


[dependencies]
tokio.workspace = true
prost.workspace = true
tracing = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow.workspace = true
async-nats.workspace = true
async-trait = "0.1"
mockall = "0.13"
envy.workspace = true
opentelemetry = { version = "0.31", features = ["metrics"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
socket2.workspace = true

mikrom-proto = { version = "0.3.0", path = "../mikrom-proto", features = ["telemetry"] }
dotenvy = "0.15"

[features]
default = ["build"]
build = []
test-utils = []
scheduler-e2e = []
